# basis

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  basis.md  rsync.sh
crates/basis-agent/: Cargo.toml
crates/basis-agent/src/: bgp.rs  bgp_routes.rs  config.rs  db.rs  gpu.rs  handlers.rs  host_info.rs  image.rs  lib.rs  lvm.rs  main.rs  metrics.rs  network.rs  reconcile.rs  vm.rs
crates/basis-agent/src/network/: cluster.rs  mod.rs  tree.rs
crates/basis-capi-provider/: Cargo.toml
crates/basis-capi-provider/src/: basis_client.rs  bootstrap.rs  cilium_bgp.rs  client_cache.rs  cluster.rs  components-template.yaml  components.rs  conditions.rs  crds.rs  lib.rs  machine.rs  main.rs  reconcile_util.rs  reconciler.rs  startup.rs  workload.rs
crates/basis-capi-provider/tests/: components_snapshot.rs
crates/basis-client/: Cargo.toml
crates/basis-client/src/: lib.rs
crates/basis-common/: Cargo.toml
crates/basis-common/src/: gobgp.rs  gpu.rs  holo.rs  json.rs  lib.rs  resource.rs  time.rs  tls.rs
crates/basis-controller/: Cargo.toml
crates/basis-controller/src/: bgp.rs  config.rs  db.rs  host.rs  ip.rs  lib.rs  main.rs  metrics.rs  scheduler.rs  server.rs
crates/basis-controller/tests/: certs.rs  integration.rs
crates/basis-ctl/: Cargo.toml
crates/basis-ctl/fixtures/: bootstrap-debug.yaml  cluster.yaml  machine-debug.yaml
crates/basis-ctl/src/: main.rs  resources.rs
crates/basis-proto/: Cargo.toml  build.rs
crates/basis-proto/proto/: basis.proto
crates/basis-proto/src/: lib.rs
deploy/: bootstrap.sh  build.Dockerfile
deploy/ansible/: .gitignore  README.md  ansible.cfg  inventory.ini.example  requirements.yml  site.yml
deploy/ansible/group_vars/: all.yml
deploy/ansible/host_vars/: node-1.yml  node-2.yml
deploy/ansible/roles/basis-agent/handlers/: main.yml
deploy/ansible/roles/basis-agent/tasks/: main.yml
deploy/ansible/roles/basis-agent/templates/: basis-agent.service.j2  host.yaml.j2
deploy/ansible/roles/basis-controller/handlers/: main.yml
deploy/ansible/roles/basis-controller/tasks/: main.yml
deploy/ansible/roles/basis-controller/templates/: basis-controller.service.j2  basiscontroller.yaml.j2
deploy/ansible/roles/basis-gobgpd/handlers/: main.yml
deploy/ansible/roles/basis-gobgpd/tasks/: main.yml
deploy/ansible/roles/basis-gobgpd/templates/: gobgpd.service.j2
deploy/ansible/roles/basis-holod/handlers/: main.yml
deploy/ansible/roles/basis-holod/tasks/: main.yml
deploy/ansible/roles/basis-holod/templates/: holod.service.j2  holod.toml.j2
deploy/ansible/roles/basis-pki/tasks/: issue_leaf.yml  main.yml
deploy/ansible/roles/basis-prereqs/tasks/: main.yml
deploy/ansible/roles/basis-prereqs/templates/: 60-basis-bridge.yaml.j2
deploy/capi/: infrastructure-components.yaml
deploy/crds/: basis-crds.yaml
deploy/examples/: basiscontroller.yaml  host.yaml
deploy/observability/: README.md  docker-compose.yml  prometheus.yml
deploy/observability/grafana/dashboards/: basis-agent.json  basis-storage.json  basis.json
deploy/observability/grafana/provisioning/dashboards/: default.yml
deploy/systemd/: basis-agent.service  basis-controller.service
docs/: cluster-network-isolation.md  gobgp-evpn-migration.md  k8s-only-simplifications.md  lattice-integration.md  lattice-rook-integration.md  network-flows.html  networking.md  storage-tiering-design.md
scripts/: build-capi-provider.sh  build-node-image.sh  chaos.sh  generate-capi-components.sh  investigate-vm.sh  load-testing.sh  probe-router-bgp.sh  smoke.sh
scripts/dev/: diagnose-vm-egress.sh  storage-reorg-node1.sh  storage-reorg-node2.sh
scripts/lib/: pki.sh
