[workspace]
resolver = "2"
members = [
    "crates/basis-proto",
    "crates/basis-common",
    "crates/basis-client",
    "crates/basis-controller",
    "crates/basis-agent",
    "crates/basis-capi-provider",
    "crates/basis-ctl",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Internal crates
basis-proto = { path = "crates/basis-proto" }
basis-common = { path = "crates/basis-common" }
basis-client = { path = "crates/basis-client" }
basis-controller = { path = "crates/basis-controller" }

# Async runtime
tokio = { version = "1.52", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["rt"] }

# gRPC
tonic = { version = "0.14", features = ["tls-aws-lc", "transport"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"

# Crypto
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# UUID
uuid = { version = "1.23", features = ["v4"] }

# CLI
clap = { version = "4.6", features = ["derive", "env"] }

# Concurrency
dashmap = "6.1"

# Networking
ipnet = "2"

# Tower middleware
tower = { version = "0.5", features = ["util", "limit"] }

# Misc
humantime = "2"
hostname = "0.4"

# Metrics
prometheus = "0.13"
axum = "0.7"

# TLS peer cert parsing
x509-parser = "0.18"

# OCI registry client (basis-agent pulls VM disk images as OCI artifacts)
oci-client = { version = "0.16", default-features = false, features = ["rustls-tls"] }

# Integrity check for OCI layers (basis-agent verifies manifest digests)
sha2 = "0.10"

# Test-only: self-signed cert generation
rcgen = "0.13"

# Kubernetes (basis-capi-provider only)
kube = { version = "3.1", features = ["runtime", "derive", "client", "rustls-tls"], default-features = false }
k8s-openapi = { version = "0.27", features = ["latest"] }
schemars = "1"
