[package]
name = "basis-agent"
version.workspace = true
edition.workspace = true
description = "Basis hypervisor agent — VM process management, disk images, networking, GPU passthrough"

[dependencies]
basis-proto.workspace = true

tokio.workspace = true
tokio-stream.workspace = true

tonic.workspace = true

rustls.workspace = true

serde.workspace = true
toml.workspace = true

thiserror.workspace = true
anyhow.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

futures.workspace = true

clap.workspace = true
serde_json.workspace = true
hostname.workspace = true
sqlx.workspace = true
humantime.workspace = true
