[package]
name = "basis-common"
version.workspace = true
edition.workspace = true
description = "Shared utilities for Basis: TLS config, time helpers, shared types"

[dependencies]
basis-proto.workspace = true

tonic.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
thiserror.workspace = true
humantime.workspace = true
x509-parser.workspace = true
tracing.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tempfile = "3"
rcgen.workspace = true
