[package]
name = "basis-controller"
version.workspace = true
edition.workspace = true
description = "Basis hypervisor controller — scheduler, IP allocator, gRPC server"

[dependencies]
basis-proto.workspace = true
basis-common.workspace = true

tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true

tonic.workspace = true

rustls.workspace = true

serde.workspace = true
serde_yaml_ng.workspace = true

thiserror.workspace = true
anyhow.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

sqlx.workspace = true

futures.workspace = true

uuid.workspace = true
clap.workspace = true
dashmap.workspace = true
tower.workspace = true
serde_json.workspace = true
humantime.workspace = true

[dev-dependencies]
rcgen.workspace = true
tempfile = "3"
